classDiagram
   
    class Machine {
        -String code
        -String nom
    }
    class Produit {
        -String code
        -String nom
        -int quantite
    }
    class Salle {
        -String numero
        -boolean disponible
    }
    class RendezVous {
        -DateTime date
        -Patient patient
        -Dentiste dentiste
        -Salle salle
    }
   
    class Document {
        -List~Radio~ radios
        -List~Scanner~ scanners
        -List~Analyse~ analyses
        -List~Ordonnance~ ordonnances
        -List~Soin~ soins
    }
    class Utilisateur {
        -String id
        -String nom
        -String prenom
        -String username
        -String password
        -Role role
    }
    
    class Dentiste {
       
    }
    
    class Dent {
        -String code
        -String position
    }
    class Soin {
        -String code
        -String description
        -Dent dent
    }
     class Patient {
        -String id
        -String nom
        -String prenom
        -Document dossierMedical
    }
    class RendezVousSoin {
        -String id
        -String idPatient
        -String codeSoin
    }

    class Facture {
        -String numero
        -DateTime date
        -float montant
        -Patient patient
        -List~Soin~ soins
    }

    
    
    Salle "1" -- "1" Dentiste
    Patient "1" -- "*" Document
    Patient "1" -- "*" RendezVous
   
    RendezVousSoin "1" -- "*" Soin
    RendezVousSoin "1" -- "*" RendezVous

        
    Utilisateur <|-- Dentiste
    Dent "1" -- "*" Soin
    
    Facture "1" -- "1" RendezVousSoin
    Document "1" -- "*" Soin
    Dentiste "1" -- "*" RendezVous